--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph.xml"
-    app:startDestination="@id/categoryFragment">
+    app:startDestination="@id/wordsFragment">
 
 
     <fragment
         android:id="@+id/categoryFragment"
         android:name="com.example.android3lesson2.ui.fragments.CategoryFragment"
         android:label="fragment_category"
-        tools:layout="@layout/fragment_category" >
+        tools:layout="@layout/fragment_category">
         <action
             android:id="@+id/action_categoryFragment_to_wordsFragment"
             app:destination="@id/wordsFragment" />
@@ -19,9 +19,10 @@
         android:id="@+id/wordsFragment"
         android:name="com.example.android3lesson2.ui.fragments.WordsFragment"
         android:label="fragment_words"
-        tools:layout="@layout/fragment_words" >
+        tools:layout="@layout/fragment_words">
         <action
             android:id="@+id/action_wordsFragment_to_categoryFragment"
             app:destination="@id/categoryFragment" />
     </fragment>
+
 </navigation>
