get everything done

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph.xml"
-    app:startDestination="@id/mainBoardFragment">
+    app:startDestination="@id/categoryFragment">
 
 
     <fragment
@@ -13,22 +13,48 @@
         tools:layout="@layout/fragment_category">
         <action
             android:id="@+id/action_categoryFragment_to_wordsFragment"
-            app:destination="@id/wordsFragment" />
+            app:destination="@id/wordsFragment">
+
+
+        </action>
+        <action
+            android:id="@+id/action_categoryFragment_to_createCategoryBottomSheetFragment"
+            app:destination="@id/createCategoryBottomSheetFragment" />
+
+
     </fragment>
     <fragment
         android:id="@+id/wordsFragment"
         android:name="com.example.android3lesson2.ui.fragments.WordsFragment"
         android:label="fragment_words"
         tools:layout="@layout/fragment_words">
-        <action
-            android:id="@+id/action_wordsFragment_to_categoryFragment"
-            app:destination="@id/categoryFragment" />
+
+        <argument
+            android:name="stringFromDialogToWords"
+            app:argType="string" />
+        <argument
+            android:name="intFromDialogToWords"
+            app:argType="integer" />
+
+
     </fragment>
     <fragment
         android:id="@+id/mainBoardFragment"
         android:name="com.example.android3lesson2.ui.fragments.MainBoardFragment"
         android:label="fragment_main_board"
         tools:layout="@layout/fragment_main_board" />
-
-
+    <dialog
+        android:id="@+id/createCategoryBottomSheetFragment"
+        android:name="com.example.android3lesson2.ui.fragments.CreateCategoryBottomSheetFragment"
+        android:label="fragment_create_category_bottom_sheet"
+        tools:layout="@layout/fragment_create_category_bottom_sheet" />
+    <dialog
+        android:id="@+id/createWordBottomSheetFragment"
+        android:name="com.example.android3lesson2.ui.fragments.CreateWordBottomSheetFragment"
+        android:label="fragment_create_word_bottom_sheet"
+        tools:layout="@layout/fragment_create_word_bottom_sheet">
+        <action
+            android:id="@+id/action_createWordBottomSheetFragment_to_wordsFragment"
+            app:destination="@id/wordsFragment" />
+    </dialog>
 </navigation>
